--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,6 +1,9 @@
 
 <div class="container pt-4 pb-4 ">
-    <div class="d-grip gap-2-mt-4 mb-3">
-        <a routerLink="/show" class="btn btn-primary" type="button">Mostrar Incidencias</a>
-    </div>
+
+    <h1>¡Bienvenido al panel de incidencias!</h1>
+
+
+    
 </div>
+
