--- a/src/app/componentes/crear/crear.component.html
+++ b/src/app/componentes/crear/crear.component.html
@@ -1,30 +1,20 @@
-<div class="container pt-4 pb-4">
+<div class="contenedorCrear pt-4 pb-4">
     
-    <button routerLink="/" class="btn btn-primary mt-2 mb-3">Volver al Inicio</button>
+    <h1>Creación de nueva incidencia</h1>
+    <hr>
 
-    <h1>Creación de nuevo incidencia</h1>
     <form [formGroup]="incidenciaForm" (ngSubmit)="onSubmit()" novalidate>
+        
+        <div class="mb-3">
+            <label class="form-label">Fecha de la incidencia</label>
+            <input formControlName="fecha" type="date" class="form-control" required="">
+        </div>
 
         <div class="mb-3">
             <label class="form-label">Descripción</label>
-            <input formControlName="descripcion" type="text" class="form-control" required="">
-        </div>
-    
-        <div class="mb-3">
-            <label class="form-label">Estado</label>
-            
-            <select class="form-select"  placeholder="Estado" formControlName="estado">
-                <option selected>Selecciona una opción...</option>
-                <option value="leido">Leido</option>
-                <option value="asignado">Asignado</option>
-                <option value="comenzado">Comenzado</option>
-                <option value="terminado">Terminado</option>
-              </select>
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label">Fecha</label>
-            <input formControlName="fecha" type="date" class="form-control" required="">
+            <textarea name="mitextarea" id="mitextarea" cols="40" rows="5" style="resize: none;"
+             formControlName="descripcion" class="form-control"  placeholder="Descripción de la incidencia..."  type="text">
+            </textarea>
         </div>
 
         <div class="mb-3">
@@ -36,6 +26,18 @@
             <label class="form-label">Posible Arreglo</label>
             <input formControlName="posible_arreglo" type="text" class="form-control" required="">
         </div>
+
+        <!--<div class="mb-3">
+            <label class="form-label">Estado</label>
+            
+            <select formControlName="estado" class="form-select"  placeholder="Estado"  type="text">
+                <option selected>Selecciona una opción...</option>
+                <option value="Leido">Leido</option>
+                <option value="Asignado">Asignado</option>
+                <option value="Comenzado">Comenzado</option>
+                <option value="Terminado">Terminado</option>
+              </select>
+        </div>-->
 
 
         <button [disabled]="!incidenciaForm.valid" type="submit" class="btn btn-primary">Crear</button>
