--- a/src/app/componentes/revision/revision.component.html
+++ b/src/app/componentes/revision/revision.component.html
@@ -27,7 +27,7 @@
             <td class="lugarTd">{{incidencia.lugar}}</td>
             <td class="posibleArregloTd">{{incidencia.posible_arreglo}}</td>
             <td>
-              <button (click)="updateRow(incidencia)" class="btn btn-outline-danger">Marcar como revisado</button>
+              <button (click)="updateRow(incidencia)" class="btn btn-outline-secondary">Marcar como revisado</button>
             </td>
           </tr>
         </div>
